<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chronometer"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <TextView
        android:text="@string/pregunta16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"/>

    <TextView
        android:text="@string/completa_sentencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#c24040"
        android:textSize="8dp"/>


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pregunta16"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtResultado"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:text="@string/aceptar"
        android:id="@+id/btnAceptar"
        android:layout_gravity="center_horizontal"
        android:background="#a8f7a5" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:text="@string/btnSiguiente"
        android:id="@+id/btnSiguiente"
        android:layout_gravity="right"
        android:background="#a1d9f4"
        android:enabled="true" />


</LinearLayout>